--- a/netflix.css
+++ b/netflix.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("./img/bg.jpg");
+    background-image: url("bg.jpg");
     background-repeat: no-repeat;
     /* filter: brightness(20%); */
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/bg.jpg');
