--- a/netflix.css
+++ b/netflix.css
@@ -2,7 +2,7 @@ body{
     background-image: url("bg.jpg");
     background-repeat: no-repeat;
     /* filter: brightness(20%); */
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/bg.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('bg.jpg');
 }
 .header{
     margin: auto;
