--- a/netflix.css
+++ b/netflix.css
@@ -83,6 +83,7 @@ h3{
     border: solid 1px red;
     border-radius: 5px;
     color: white;
+    padding-left: 10px;
 }
 .input{
     height: 50px;
